basic content in html

--- a/index.html
+++ b/index.html
@@ -15,17 +15,16 @@
     <link rel="icon" href="img/favicon.ico" sizes="any" />
   </head>
   <body>
-    <h1 class="text-5xl text-center font-semibold pt-20">
-      Hello world! Write your content here.
-    </h1>
+    <div class="card">
 
-    <!-- Sarah Dole
-      @sarahdole
-      I've been searching for high-quality abstract images for my design projects, 
-      and I'm thrilled to have found this platform. The variety and depth of creativity are astounding! 
-    -->
+      <img src="img/profile-thumbnail.png" alt="profile thumbnail" class="profile-thumbnail" />
+      <h2>Sarah Dole</h2>
+      <a href="#" class="handle">@saradole</a>
 
-    <!-- Attribute this challenge to yourself! -->
+      <p>I've been searching for high-quality abstract images for my design projects, 
+      and I'm thrilled to have found this platform. The variety and depth of creativity are astounding!</p>
+    </div>
+
     <div class="credits" data-gfe-screenshot-exclude="true">
       A challenge by
       <a
@@ -36,7 +35,7 @@
       <a
         href="https://www.greatfrontend.com/projects/u/username"
         target="_blank"
-        >Your Name</a
+        >Caree Youngman</a
       >.
     </div>
     <script src="js/index.js"></script>
